possible fix button background not showing on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,7 @@ a:focus {
     font-size: 14px;
     font-weight: bold;
     transition: all 0.2s ease-in-out;
+    background-color: whitesmoke;
 }
 
 .twitter-button {
